fix: correct z-index of header

--- a/shelter/src/scss/components/_header.scss
+++ b/shelter/src/scss/components/_header.scss
@@ -11,6 +11,7 @@
     
     &--fixed {
         position: fixed;
+        z-index: 100;
         width: 100%;
         background-color: $color-white;
     }
